--- a/public/media.css
+++ b/public/media.css
@@ -1,4 +1,3 @@
-
 @media screen and (min-width: 0px) and (-webkit-min-device-pixel-ratio:0) {
 	object {
 		height: 30%;
@@ -86,14 +85,6 @@
 	.portrait {
 	    width: 100%;
 	}
-
-	#sitemap-container {
-    	width: 100%;
-    }
-
-    #sitemap-container	ul {
-    	margin-left: 0;
-  	}
 }
 
 @media screen and (min-width: 320px) {
@@ -104,10 +95,6 @@
 	#navigation {
 		display: none;
 	}
-
-	#sitemap-container ul {
-    	margin-left: 5%;
-  	}
 }
 
 @media screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio:0) {
@@ -117,10 +104,6 @@
 }
 
 @media screen and (min-width: 480px) {
-	#sitemap-container ul {
-    	margin-left: 5%;
-  	}
-
 	.fb-like.content {
 		display: inline-block;
 		padding-top: 0px;
@@ -202,14 +185,6 @@
 	.portrait {
 	    width: 45%;
 	}
-
-	#sitemap-container {
-    	width: 90%;
-    }
-
-    #sitemap-container ul {
-    	margin-left: 10%;
-  	}
 }
 
 @media screen and (min-width: 768px) {
@@ -235,21 +210,13 @@
 		width: auto;
 	}
 
-	#sitemap-container {
-    	width: 60%;
-    }
-
-    #sobre h1 {
+	#sobre h1 {
 		font-size: 2.2em;
 	}
 
 	#departamentos h1 {
 		font-size: 2em;
 	}
-
-    #sitemap-container ul {
-    	margin-left: 15%;
-  	}
 }
 
 @media screen and (min-width: 900px) {
@@ -260,12 +227,4 @@
 	#slides {
 		top: 200px;	
 	}
-
-	#sitemap-container ul {
-    	margin-left: 15%;
-  	}
-}
-
-@media screen and (min-width: 1024px) {
-
 }
